# ai-apps

./: .gitignore  .pnpmfile.cjs.bak  .vercelignore  Cargo.toml  README.md  closingtime-v2-code.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/agentic-healthcare/langgraph/: .env.r2.tmp  .vercelignore  Dockerfile  benchmark_inference.py  chat_pipeline.py  chat_server.py  config.py  db.py  embeddings.py  graph.py  ingestion_graph.py  ingestion_pipeline.py  langgraph.json  llm_backend.py  models.py  package.json  parsers.py  postprocessors.py  pyproject.toml  requirements.txt  search_graph.py  serve.sh  storage.py  vercel.json  wrangler.jsonc
apps/bricks/backend/: deploy_server.py  langgraph.json  pyproject.toml  start-codegen.sh
apps/movies/: Cargo.toml  emotional_dev_movies.md  emotional_dev_results.json  find_similar_movies.py  main.py  pyproject.toml  safety_results.json  similar_movies.md  similar_movies_results.json  test_evals.py
apps/movies/src/: main.rs
crates/agentic_press/: CLAUDE.md  Cargo.toml  README.md
crates/agentic_press/drafts/: 01_scout_topics.md  02_picker_selection.json
crates/agentic_press/evals/: deep-dive-writer.yaml  e2e-journalism.yaml  editor.yaml  journalism-seo.yaml  journalism-writer.yaml  linkedin.yaml  picker.yaml  researcher.yaml  scout.yaml  writer.yaml
crates/agentic_press/sources/: reflection.md
crates/agentic_press/src/: agent_teams.rs  deepseek.rs  lib.rs  main.rs  pipeline.rs  prompts.rs  publisher.rs  research_phase.rs  task_list.rs
crates/agentic_press/tests/: agent_test.rs  e2e_test.rs  pipeline_test.rs
crates/candle/: Cargo.toml  README.md
crates/candle/src/: embeddings.rs  hub.rs  lib.rs
crates/course-review/: ARCHITECTURE.md  Cargo.toml
crates/course-review/src/: error.rs  lib.rs  llm.rs  prompts.rs  scorer.rs  store.rs  types.rs
crates/deepseek/: Cargo.toml  README.md
crates/deepseek/src/: agent.rs  client.rs  lib.rs  reqwest_client.rs  types.rs
crates/email-gen/: Cargo.toml
crates/email-gen/src/: config.rs  error.rs  inference.rs  lora.rs  main.rs  prompt.rs
crates/genesis/: Cargo.toml  README.md
crates/genesis/src/: error.rs  types.rs
crates/github-patterns/: Cargo.toml
crates/github-patterns/scripts/: score_candidates.py
crates/github-patterns/src/: client.rs  contrib_store.rs  contributors.rs  lib.rs  skills.rs  types.rs
crates/hf/: Cargo.toml  README.md
crates/hf-agent/: Cargo.toml
crates/hf-agent/src/: lib.rs
crates/hf/examples/: adjacent_domains.rs  deep_dive_models.rs  diffbot_deep_dive.rs  diffbot_forensics.rs  doc_intel_sales.rs  embeddings_deep.rs  leadgen_deep.rs  leadgen_hot.rs  sales_10k.rs  salesloft_deep_dive.rs  scan_orgs.rs  similar_orgs.rs  sync_popular.rs
crates/hf/src/: client.rs  db.rs  error.rs  lib.rs  org.rs  types.rs
crates/hf/tests/: integration.rs
crates/hoa-research/: Cargo.toml
crates/hoa-research/src/: error.rs  hf_client.rs  lib.rs  llm.rs  main.rs  output.rs  pipeline.rs  types.rs
crates/jobbert/: Cargo.toml
crates/jobbert/examples/: embed.rs
crates/jobbert/src/: bio.rs  classifier.rs  device.rs  embedder.rs  error.rs  lib.rs  taxonomy.rs
crates/knowledge-ml/: Cargo.toml
crates/knowledge-ml/data/: courses.json  urls.txt
crates/knowledge-ml/scripts/: scrape-udemy.ts
crates/knowledge-ml/src/: course.rs  course_store.rs  error.rs  lib.rs  parser.rs  scraper.rs  store.rs  types.rs
crates/leadgen/: Cargo.toml  README.md
crates/leadgen/data/: eu-ai-consultancies.txt  leads.db
crates/leadgen/src/: main.rs  types.rs
crates/legal-inference/: Cargo.toml  README.md
crates/legal-inference/src/: config.rs  main.rs  state.rs
crates/ml-depth/: Cargo.toml  README.md
crates/ml-depth/src/: discovery.rs  lib.rs  main.rs  pipeline.rs  report.rs
crates/mulerouter/: Cargo.toml
crates/mulerouter/examples/: parallel_generate.rs
crates/mulerouter/src/: client.rs  error.rs  lib.rs  types.rs
crates/mulerouter/tests/: integration.rs
crates/qwen/: Cargo.toml  README.md
crates/qwen-vl/: Cargo.toml
crates/qwen-vl/src/: client.rs  error.rs  lib.rs  schema.rs  screenshot.rs  types.rs
crates/qwen/src/: client.rs  error.rs  lib.rs  types.rs
crates/qwen/tests/: integration.rs
crates/research/: Cargo.toml  Cargo.toml.bak  README.md  fetch_hair_papers.py  research-lh-ai-fs.md
crates/research/bs-detector-output/: 1-parser.json  2-citations.md  3-facts.md  4-report.md  bs-detector-report.md
crates/research/harbor/: benchmark.yaml
crates/research/parallel-sdd-research/: agent-01-foundations.md  agent-02-parallel-team-coordination.md  agent-03-bdd-tdd-parallel.md  agent-04-api-first-openapi.md  agent-05-model-driven-engineering.md  agent-06-requirements-engineering.md  agent-07-continuous-integration-spec-gates.md  agent-08-property-based-testing.md  agent-09-event-driven-async-specs.md  agent-10-ai-llm-spec-generation.md  synthesis.md
crates/research/promptfoo/: promptfooconfig.yaml
crates/research/research-output/: agent-01-foundations.md  agent-02-parallel-team-coordination.md  agent-03-bdd-tdd-parallel.md  agent-04-api-first-openapi.md  agent-05-model-driven-engineering.md  agent-06-requirements-engineering.md  agent-07-continuous-integration-spec-gates.md  agent-08-property-based-testing.md  agent-09-event-driven-async-specs.md  agent-10-ai-llm-spec-generation.md  hair-care-papers.json  last-week-2026-03-26.md  sdd-research-complete.md  synthesis.md
crates/research/scrapus_data/: scrapus_drift.db
crates/research/sdd-lh-ai-fs/: apply.md  archive.md  design.md  pipeline-result.json  proposal.md  spec.md  tasks.md  verify.md
crates/research/src/: affiliation.rs  lib.rs  (+11 more)
crates/sdd/: Cargo.toml  README.md
crates/travel-ml/: Cargo.toml
crates/tts/: CLAUDE.md  Cargo.toml  README.md
langgraph/: .gitignore  package.json  pyproject.toml
langgraph/evals/: conftest.py  deepseek_model.py  fixtures.py  test_generation.py  test_markdown.py  test_reflection.py  test_retry.py  test_structural.py
langgraph/src/: index.ts
pypackages/deepseek/: pyproject.toml
pypackages/research/: README.md  pyproject.toml
(+16636 files in other folders)
