[workspace]
resolver = "2"
exclude = ["crates/.claude"]
members = [
  "crates/*",
]

[workspace.dependencies]
# ── ML / HuggingFace ──────────────────────────────────────────────
candle-core         = "0.9"
candle-nn           = "0.9"
candle-transformers = "0.9"
hf-hub              = "0.4"
tokenizers          = "0.21"
mistralrs           = { version = "0.8", features = ["metal"] }
lancedb             = "0.27"
arrow-array         = "57"
arrow-schema        = "57"
ndarray             = "0.16"
ort                 = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

# ── Serialization ─────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async runtime ─────────────────────────────────────────────────
tokio      = { version = "1", features = ["full"] }
futures    = "0.3"
async-trait = "0.1"

# ── HTTP ──────────────────────────────────────────────────────────
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum       = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# ── Error handling / logging ──────────────────────────────────────
thiserror  = "2"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Database ──────────────────────────────────────────────────────
sqlx       = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }

# ── CLI / utilities ───────────────────────────────────────────────
clap       = { version = "4", features = ["derive"] }
chrono     = { version = "0.4", features = ["serde"] }
dotenvy    = "0.15"
regex      = "1"
uuid       = { version = "1", features = ["v4"] }
base64     = "0.22"
walkdir    = "2"
scraper    = "0.22"
url        = "2"

# ── Internal path dependencies ────────────────────────────────────
candle     = { path = "crates/candle", default-features = false }
deepseek   = { path = "crates/deepseek", default-features = false }
qwen       = { path = "crates/qwen" }
qwen-vl    = { path = "crates/qwen-vl", default-features = false }
research   = { path = "crates/research", default-features = false }
sdd        = { path = "crates/sdd" }
hf         = { path = "crates/hf" }
