[project]
name = "how-it-works"
version = "0.1.0"
description = "LangGraph pipeline that scans Next.js apps, analyzes codebases with DeepSeek, and generates How It Works documentation pages"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
eval = [
    "deepeval>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
how-it-works = "how_it_works.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/how_it_works"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]
markers = [
    "eval: LLM-judged evaluation tests (slow, requires DEEPSEEK_API_KEY)",
]
