[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "find-similar"
path = "src/main.rs"

[dependencies]
deepseek = { path = "../../crates/deepseek", features = ["reqwest-client"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
