[project]
name = "movies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "deepseek-client",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
]

[tool.uv.sources]
deepseek-client = { path = "../../pypackages/deepseek", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
