[package]
name = "candle"
version = "0.1.0"
edition = "2021"
description = "Shared Candle ML inference — embeddings, model loading, and Metal acceleration"
license = "MIT"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
server = ["axum", "tokio"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[[bin]]
name = "embed-server"
required-features = ["server"]
