[package]
name = "candle"
version = "0.1.0"
edition = "2021"
description = "Shared Candle ML inference — embeddings, model loading, and Metal acceleration"
license = "MIT"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
server = ["axum", "tokio"]

[dependencies]
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
candle-transformers = { workspace = true }
hf-hub              = { workspace = true }
tokenizers          = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
axum                = { workspace = true, optional = true }
tokio               = { workspace = true, optional = true }

[[bin]]
name = "embed-server"
required-features = ["server"]
