[package]
name = "course-review"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "10-expert Candle LLM course review pipeline with Lance columnar storage"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda",  "candle-transformers/cuda"]

[[bin]]
name = "review-courses"
path = "src/bin/review_courses.rs"

[dependencies]
# Local model inference (same versions as legal-inference)
candle-core         = "0.8"
candle-nn           = "0.8"
candle-transformers = "0.8"
hf-hub              = "0.4"
tokenizers          = "0.21"

# Lance vector store (same version as knowledge-ml)
lancedb      = "0.27"
arrow-array  = "57"
arrow-schema = "57"
futures      = "0.3"

# Async runtime + CLI
tokio  = { version = "1", features = ["full"] }
clap   = { version = "4", features = ["derive"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow    = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
