[package]
name = "course-review"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "10-expert Candle LLM course review pipeline with Lance columnar storage"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda",  "candle-transformers/cuda"]

[[bin]]
name = "review-courses"
path = "src/bin/review_courses.rs"

[dependencies]
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
candle-transformers = { workspace = true }
hf-hub              = { workspace = true }
tokenizers          = { workspace = true }

lancedb      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
futures      = { workspace = true }

tokio  = { workspace = true }
clap   = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
