[package]
name = "deepseek"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared DeepSeek API client — types, reqwest transport, WASM transport, agent loop, and caching"

[features]
default = ["reqwest-client"]
reqwest-client = ["dep:reqwest", "dep:anyhow", "dep:tokio"]
wasm = ["dep:worker", "dep:js-sys"]
cache = ["dep:dashmap", "dep:sha2", "dep:tokio"]
agent = []

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
async-trait = { workspace = true }
tracing    = { workspace = true }

# reqwest-client feature
reqwest = { workspace = true, optional = true }

# wasm feature
worker = { version = "0.7", optional = true }
js-sys = { version = "0.3", optional = true }

# cache feature
dashmap = { version = "6", optional = true }
sha2    = { version = "0.10", optional = true }
tokio   = { workspace = true, optional = true }
anyhow  = { workspace = true, optional = true }
