[package]
name = "email-gen"
version = "0.1.0"
edition = "2021"
description = "Rust inference engine for B2B email generation via Qwen3 + LoRA (Candle + Metal)"
license = "MIT"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
candle-transformers = { workspace = true }
hf-hub              = { workspace = true }
tokenizers          = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

[[bin]]
name = "email-gen"
path = "src/main.rs"
