[package]
name = "genesis"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Self-improving code generation system — wraps SDD pipeline in a learning layer"

[[bin]]
name = "genesis"
path = "src/bin/genesis.rs"

[dependencies]
sdd      = { workspace = true }
deepseek = { workspace = true, features = ["agent", "cache"] }
research = { workspace = true }
qwen     = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { version = "0.3" }
async-trait = { workspace = true }
thiserror  = { workspace = true }
clap       = { workspace = true }
chrono     = { workspace = true }
rand       = "0.8"
uuid       = { workspace = true }

[dev-dependencies]
tempfile = "3"
