[package]
name = "github-patterns"
version = "0.1.0"
edition = "2021"
description = "GitHub API client for detecting lead-gen signals: AI adoption, tech stack, activity, and hiring patterns"

[features]
default = ["client"]
client   = ["dep:reqwest", "dep:tokio", "dep:anyhow"]
search   = ["client"]   # org/repo search by ICP criteria
patterns = ["client"]   # full pattern analysis (AI, stack, activity, hiring)

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
async-trait = "0.1"
tracing     = "0.1"
chrono      = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio   = { version = "1", features = ["time"], optional = true }
anyhow  = { version = "1", optional = true }
