[package]
name = "github-patterns"
version = "0.1.0"
edition = "2021"
description = "GitHub API client for detecting lead-gen signals: AI adoption, tech stack, activity, and hiring patterns"

[features]
default  = ["client"]
client   = ["dep:reqwest", "dep:tokio", "dep:anyhow"]
search   = ["client"]
patterns = ["client", "dep:futures", "dep:toml"]
# Local BERT semantic scoring via candle — no cloud, runs on Metal / CPU
embed    = ["patterns", "dep:candle"]
# Neon PostgreSQL writer + scan binary
neon     = ["patterns", "dep:sqlx", "dep:dotenvy", "dep:tracing-subscriber",
            "tokio/macros", "tokio/rt-multi-thread"]
# LanceDB contributor store + scrape_contributors binary
lance    = ["client", "dep:lancedb", "dep:arrow-array", "dep:arrow-schema",
            "dep:dotenvy", "dep:tracing-subscriber",
            "tokio/macros", "tokio/rt-multi-thread"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
async-trait = "0.1"
tracing     = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
base64      = "0.22"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio   = { version = "1", features = ["time"], optional = true }
anyhow  = { version = "1", optional = true }
futures = { version = "0.3", features = ["std"], optional = true }
toml    = { version = "0.8", optional = true }
candle  = { path = "../candle", optional = true, default-features = false }
sqlx    = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"], optional = true }
dotenvy = { version = "0.15", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
lancedb     = { version = "0.27", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

[[bin]]
name = "scan_orgs"
path = "src/bin/scan_orgs.rs"
required-features = ["neon"]

[[bin]]
name = "scrape_contributors"
path = "src/bin/scrape_contributors.rs"
required-features = ["lance"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
