[package]
name = "hf"
version = "0.1.0"
edition = "2021"
authors = ["Vadim Nicolai <v9ai>"]
description = "Parallel data retrieval from Hugging Face Hub API for lead-gen pipelines"
license = "MIT"
repository = "https://github.com/v9ai/lead-gen-crates"
keywords = ["huggingface", "parallel", "async", "sales", "lead-generation"]

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
reqwest    = { workspace = true, features = ["stream"] }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
futures    = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
rusqlite   = { version = "0.32", features = ["bundled"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "sync_popular"
required-features = ["sqlite"]

[[example]]
name = "similar_orgs"
