[package]
name = "hoa-research"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "20-agent person research pipeline — Candle local inference + HF remote, parallel via tokio"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda",  "candle-transformers/cuda"]

[[bin]]
name = "hoa-research"
path = "src/main.rs"

[dependencies]
# Local model inference (Candle Qwen2.5 GGUF on Metal)
candle-core         = "0.8"
candle-nn           = "0.8"
candle-transformers = "0.8"
hf-hub              = "0.4"
tokenizers          = "0.21"

# Lance vector store (blog embeddings)
lancedb      = "0.27"
arrow-array  = "57"
arrow-schema = "57"
futures      = "0.3"

# HTTP client (web search, API calls, page scraping)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow    = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono     = { version = "0.4", features = ["serde"] }
scraper    = "0.22"
regex-lite = "0.1"
url        = "2"
