[package]
name = "hoa-research"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "20-agent person research pipeline — Candle local inference + HF remote, parallel via tokio"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda",  "candle-transformers/cuda"]

[[bin]]
name = "hoa-research"
path = "src/main.rs"

[dependencies]
mistralrs           = { workspace = true }
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
candle-transformers = { workspace = true }
hf-hub              = { workspace = true }
tokenizers          = { workspace = true }

lancedb      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
futures      = { workspace = true }

reqwest = { workspace = true }
tokio   = { workspace = true }
clap    = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

chrono     = { workspace = true }
scraper    = { workspace = true }
regex-lite = "0.1"
url        = { workspace = true }
