[package]
name = "jobbert"
version = "0.1.0"
edition = "2021"
description = "JobBERT dual-model inference — job embeddings (XLMRoberta) + skill extraction (BERT NER) via Candle"
license = "MIT"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.4"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "embed"

[[example]]
name = "extract"

