[package]
name = "knowledge-ml"
version = "0.1.0"
edition = "2021"
description = "Rust-native ML pipeline for the knowledge app — Candle embeddings + Lance vector store"
license = "MIT"

[features]
default = ["metal"]
metal   = ["candle/metal"]
cuda    = ["candle/cuda"]

[[bin]]
name = "embed-lessons"
path = "src/bin/embed_lessons.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[dependencies]
candle    = { path = "../candle", default-features = false }
lancedb   = "0.27"
arrow-array  = "57"
arrow-schema = "57"
futures      = "0.3"
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow    = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir   = "2"
clap      = { version = "4", features = ["derive"] }
