[package]
name = "knowledge-ml"
version = "0.1.0"
edition = "2021"
description = "Rust-native ML pipeline for the knowledge app — Candle embeddings + Lance vector store"
license = "MIT"

[features]
default = ["metal"]
metal   = ["candle/metal"]
cuda    = ["candle/cuda"]

[[bin]]
name = "embed-lessons"
path = "src/bin/embed_lessons.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[dependencies]
candle     = { workspace = true }
lancedb    = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
futures    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir    = { workspace = true }
clap       = { workspace = true }
reqwest    = { workspace = true }
