[package]
name = "leadgen"
version = "0.1.0"
edition = "2021"

[features]
default = ["candle-metal"]
candle-metal = ["candle/metal"]
candle-cuda = ["candle/cuda"]
# Enable Neon PostgreSQL batch scoring (sqlx postgres driver)
neon = ["sqlx/postgres"]

[[bin]]
name = "resend_export"
path = "src/bin/resend_export.rs"

[[bin]]
name = "resend_scrape"
path = "src/bin/resend_scrape.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "query"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tantivy = "0.22"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
strsim = "0.11"
petgraph = "0.6"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
ndarray = "0.16"

# Headless Chrome (CDP)
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
async-channel = "2"

# Local ML inference
candle = { path = "../candle" }
