[package]
name = "leadgen"
version = "0.1.0"
edition = "2021"

[features]
default = ["candle-metal"]
candle-metal = ["candle/metal"]
candle-cuda = ["candle/cuda"]
# Enable Neon PostgreSQL batch scoring (sqlx postgres driver)
neon = ["sqlx/postgres"]

[[bin]]
name = "resend_export"
path = "src/bin/resend_export.rs"

[[bin]]
name = "resend_scrape"
path = "src/bin/resend_scrape.rs"

[dependencies]
tokio      = { workspace = true }
axum       = { workspace = true, features = ["json", "query"] }
tower-http = { workspace = true, features = ["trace"] }
reqwest    = { workspace = true }
scraper    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sqlx       = { workspace = true, features = ["sqlite", "migrate", "chrono"] }
tantivy    = "0.22"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
regex      = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
strsim     = "0.11"
petgraph   = "0.6"
async-trait = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
ndarray    = { workspace = true }

# Worker pool channels
async-channel = "2"

# Local ML inference
candle = { workspace = true }

# Vision-language model scraping
qwen-vl = { workspace = true }
