[package]
name = "legal-inference"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local Candle inference server — embeddings (BGE-large) + LLM (Phi-3.5-mini) with Metal GPU"

[[bin]]
name = "legal-inference"
path = "src/main.rs"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
candle-transformers = { workspace = true }
hf-hub              = { workspace = true }
tokenizers          = { workspace = true }

axum       = { workspace = true, features = ["json"] }
tokio      = { workspace = true }
tower-http = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
