[package]
name = "ml-depth"
version = "0.1.0"
edition = "2021"
description = "Discover and validate genuine deep ML companies via HuggingFace Hub + academic papers"

[[bin]]
name = "ml-depth"
path = "src/main.rs"

[dependencies]
hf = { path = "../hf", features = ["sqlite"] }
research = { path = "../research", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
