[package]
name = "ml-depth"
version = "0.1.0"
edition = "2021"
description = "Discover and validate genuine deep ML companies via HuggingFace Hub + academic papers"

[[bin]]
name = "ml-depth"
path = "src/main.rs"

[dependencies]
hf       = { workspace = true, features = ["sqlite"] }
research = { workspace = true }
tokio    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
dotenvy    = { workspace = true }
clap       = { workspace = true }
