[package]
name = "mulerouter"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for the MuleRouter API (Qwen endpoints)"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
dotenvy = "0.15"
serial_test = "3"
