[package]
name = "qwen"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for Alibaba DashScope API (Qwen embeddings & chat)"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serial_test = "3"
