[package]
name = "qwen"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for Alibaba DashScope API (Qwen embeddings & chat)"
license = "MIT"

[dependencies]
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
dotenvy     = { workspace = true }
serial_test = "3"
