[package]
name = "research"
version = "0.1.0"
edition = "2021"
description = "Shared research infrastructure: Semantic Scholar client, DeepSeek + Qwen dual-model agent framework, and paper search tools"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
walkdir = "2"
ast-grep-core = "0.41"
ast-grep-language = "0.41"
sdd = { path = "../sdd" }
deepseek = { path = "../deepseek", features = ["agent"] }
qwen = { path = "../qwen" }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
wiremock = "0.6"

[[bin]]
name = "healthcare-research"
path = "src/bin/healthcare_research.rs"

[[bin]]
name = "code-research"
path = "src/bin/code_research.rs"

[[bin]]
name = "law-research"
path = "src/bin/law_research.rs"

[[bin]]
name = "interview-prep"
path = "src/bin/interview_prep.rs"

[[bin]]
name = "condition-research"
path = "src/bin/condition_research.rs"

[[bin]]
name = "tts-research"
path = "src/bin/tts_research.rs"
