[package]
name = "research"
version = "0.1.0"
edition = "2021"
description = "Shared research infrastructure: Semantic Scholar client, DeepSeek + Qwen dual-model agent framework, and paper search tools"

[features]
default = []
local-vector = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:lancedb",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:arrow",
    "dep:regex",
    "dep:sha2",
    "dep:hex",
    "dep:clap",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
walkdir = "2"
ast-grep-core = "0.41"
ast-grep-language = "0.41"
sdd = { path = "../sdd" }
deepseek = { path = "../deepseek", features = ["agent"] }
qwen = { path = "../qwen" }

# arXiv Atom feed parsing (always compiled)
quick-xml = "0.37"
futures = "0.3"
chrono = "0.4"

# Local vector pipeline (feature-gated)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }
lancedb = { version = "0.27", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
arrow = { version = "57", optional = true }
regex = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
wiremock = "0.6"

[[bin]]
name = "healthcare-research"
path = "src/bin/healthcare_research.rs"

[[bin]]
name = "code-research"
path = "src/bin/code_research.rs"

[[bin]]
name = "law-research"
path = "src/bin/law_research.rs"

[[bin]]
name = "interview-prep"
path = "src/bin/interview_prep.rs"

[[bin]]
name = "condition-research"
path = "src/bin/condition_research.rs"

[[bin]]
name = "tts-research"
path = "src/bin/tts_research.rs"

[[bin]]
name = "therapeutic-research"
path = "src/bin/therapeutic_research.rs"

[[bin]]
name = "eval-therapeutic"
path = "src/bin/eval_therapeutic.rs"

[[bin]]
name = "real-estate-research"
path = "src/bin/real_estate_research.rs"

[[bin]]
name = "knowledge-research"
path = "src/bin/knowledge_research.rs"

[[bin]]
name = "scalping-research"
path = "src/bin/scalping_research.rs"

[[bin]]
name = "calm-parent-research"
path = "src/bin/calm_parent_research.rs"

[[bin]]
name = "todo-research"
path = "src/bin/todo_research.rs"

[[bin]]
name = "todo-sdd"
path = "src/bin/todo_sdd.rs"

[[bin]]
name = "eval-characteristic"
path = "src/bin/eval_characteristic.rs"

[[bin]]
name = "characteristic-research"
path = "src/bin/characteristic_research.rs"

[[bin]]
name = "bear-market-trading"
path = "src/bin/bear_market_trading.rs"

[[bin]]
name = "qwen-investigate"
path = "src/bin/qwen_investigate.rs"

[[bin]]
name = "paper-discovery"
path = "src/bin/paper_discovery.rs"
required-features = ["local-vector"]

[[bin]]
name = "scrapus-research"
path = "src/bin/scrapus_research.rs"

[[bin]]
name = "last-week-papers"
path = "src/bin/last_week_papers.rs"
required-features = ["local-vector"]
